# inklink

./: .gitignore  README.md  config.toml.example  pyproject.toml
docs/: configuration.md  development.md  llm-compatibility.md  long-context.md  workflow.md
docs/superpowers/plans/: 2026-06-22-inklink-implementation.md
docs/superpowers/specs/: 2026-06-22-inklink-design.md
src/inklink/: __main__.py  atomic.py  chapters.py  cli.py  config.py  locks.py
src/inklink/domain/: __init__.py  checks.py  index.py  models.py
src/inklink/llm/: __init__.py  limiter.py  openai_client.py  types.py  usage.py
src/inklink/storage/: __init__.py  events.py  schema.py  sqlite.py
src/inklink/tools/: __init__.py  registry.py
src/inklink/tui/: __init__.py  app.py  screens.py  snapshot.py
src/inklink/web/: __init__.py  app.py  server.py  snapshot.py
src/inklink/workflow/: __init__.py  executor.py  models.py  pipeline.py  service.py
tests/: conftest.py  test_atomic.py  test_chapters.py  test_checks.py  test_cli.py  test_config.py  test_index.py  test_limiter.py  test_llm_usage.py  test_locks.py  test_openai_client.py  test_pipeline.py  test_storage.py  test_tools.py  test_tui.py  test_web.py  test_workflow.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  styles.css  types.ts
