[project]
name = "inklink"
version = "0.1.0"
description = "AI-driven Chinese novel continuation tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0",
  "openai>=2.0.0",
  "pydantic>=2.12.0",
  "typer>=0.21.0",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
inklink = "inklink.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["inklink"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
